Aspect ratio handling. Add some constants

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         body {margin: 0; overflow:hidden; color: white; font-family: Helvetica, Arial, sans-serif;overscroll-behavior-y: none; position: fixed;user-select: none;-webkit-user-select: none; -moz-user-select: none;}
         canvas {display:block}
         #ui {position:absolute; top:0; left:0; width:100%; height:100%; pointer-events: none;touch-action: none;}
-        #menu-ui > #title {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -100%); font-size: 6em; text-shadow: 1px 1px 3px blue;}
-        #menu-ui > #info {position: absolute; right: 0; bottom: 0; padding: 1em 2em; text-align: right;}
-        #score {position: absolute; left: 0; top: 0; padding: 0.25em 1em;}
+        #menu-ui > #title {position: absolute; top: 50%; width:100%; transform: translate(0, -100%); font-size: 12vmin; text-align: center; text-shadow: 1px 1px 3px blue;}
+        #menu-ui > #info {position: absolute; right: 0; bottom: 0; padding: 1em 2em; text-align: right; font-size: 6vmin; }
+        #score {position: absolute; left: 0; top: 0; padding: 0.25em 1em; font-size: 6vmin; }
     </style>
     <script src="dist/bundle.js"></script>
   </head>
